--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To Do list: list structure",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/gealsanchez/todolist#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-localstorage-mock": "^2.4.22",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
